--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,47 @@ asgiref==3.4.1
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+contourpy==1.2.0
 cryptography==41.0.7
+cycler==0.12.1
 defusedxml==0.7.1
 Django==3.2
+django-admin-interface==0.28.5
+django-admin-tools==0.9.3
 django-allauth==0.59.0
+django-chartjs==2.3.0
+django-colorfield==0.11.0
+et-xmlfile==1.1.0
+fonttools==4.47.2
+gunicorn==21.2.0
 idna==3.6
+importlib-resources==6.1.1
+kiwisolver==1.4.5
+matplotlib==3.8.2
+numpy==1.26.3
 oauthlib==3.2.2
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.2.0
+pillow==10.2.0
 psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-slugify==8.0.3
 python3-openid==3.2.0
 pytz==2021.3
 razorpay==1.4.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
 typing_extensions==4.0.1
+tzdata==2023.4
 urllib3==2.1.0
-gunicorn
-whitenoise
-django-admin-interface==0.28.5
+whitenoise==6.6.0
+XlsxWriter==3.1.9
+zipp==3.17.0
